fix links and icon alignment

--- a/resources/less/metager/startpage-only.less
+++ b/resources/less/metager/startpage-only.less
@@ -116,6 +116,7 @@ footer {
 #story-container > section .story-icon { // sets all icons for all sections
     grid-area: story-icon;
     padding: 20px;
+    text-align: right;
 }
 
 .story-icon img { // defines the story-icons in the sections
